# montreal-transit-chatbot

./: .env.example  .gitignore  CLAUDE.md  EXAMPLES.md  QUICKSTART.md  README.md  docker-compose.otp.yml  docker-compose.photon.yml  restart-otp.sh  setup-otp.sh  setup.sh  start-otp.sh  start.sh  stop.sh
.github/workflows/: lint.yml
docs/: ARCHITECTURE.md  INSTALL.md  RUN.md
src/backend/: config.py  main.py  models.py  prompt.txt  pyproject.toml  tools.py
src/backend/services/: __init__.py  chat.py  session.py
src/backend/tools/: __init__.py  datetime_tool.py  definitions.py  geocoding_tool.py  implementations.py  registry.py  routing_tool.py  transit_tool.py  weather_tool.py
src/frontend/: api_client.py  config.py  main.py  pyproject.toml  state.py
src/frontend/.streamlit/: config.toml
src/frontend/assets/: geolocation.js
src/frontend/components/: __init__.py  chat.py  location.py  quick_actions.py  sidebar.py
